refactor: replace rhysd/go-github-selfupdate with creativeprojects/go-selfupdate
Signed-off-by: Samuel K <skevetter@pm.me>

--- a/docs/pages/licenses/devpod.mdx
+++ b/docs/pages/licenses/devpod.mdx
@@ -191,7 +191,7 @@ Some packages may only be included on certain architectures or operating systems
  - [github.com/prometheus/client_model/go](https://pkg.go.dev/github.com/prometheus/client_model/go) ([Apache-2.0](https://github.com/skevetter/devpod/blob/HEAD/vendor/github.com/prometheus/client_model/LICENSE))
  - [github.com/prometheus/common](https://pkg.go.dev/github.com/prometheus/common) ([Apache-2.0](https://github.com/skevetter/devpod/blob/HEAD/vendor/github.com/prometheus/common/LICENSE))
  - [github.com/prometheus/procfs](https://pkg.go.dev/github.com/prometheus/procfs) ([Apache-2.0](https://github.com/skevetter/devpod/blob/HEAD/vendor/github.com/prometheus/procfs/LICENSE))
- - [github.com/rhysd/go-github-selfupdate/selfupdate](https://pkg.go.dev/github.com/rhysd/go-github-selfupdate/selfupdate) ([MIT](https://github.com/skevetter/devpod/blob/HEAD/vendor/github.com/rhysd/go-github-selfupdate/LICENSE))
+ - [github.com/creativeprojects/go-selfupdate](https://pkg.go.dev/github.com/creativeprojects/go-selfupdate) ([MIT](https://github.com/creativeprojects/go-selfupdate/blob/main/LICENSE))
  - [github.com/rivo/uniseg](https://pkg.go.dev/github.com/rivo/uniseg) ([MIT](https://github.com/skevetter/devpod/blob/HEAD/vendor/github.com/rivo/uniseg/LICENSE.txt))
  - [github.com/secure-systems-lab/go-securesystemslib](https://pkg.go.dev/github.com/secure-systems-lab/go-securesystemslib) ([MIT](https://github.com/skevetter/devpod/blob/HEAD/vendor/github.com/secure-systems-lab/go-securesystemslib/LICENSE))
  - [github.com/shibumi/go-pathspec](https://pkg.go.dev/github.com/shibumi/go-pathspec) ([Apache-2.0](https://github.com/skevetter/devpod/blob/HEAD/vendor/github.com/shibumi/go-pathspec/LICENSE))
