--- a/docs/pages/managing-providers/add-provider.mdx
+++ b/docs/pages/managing-providers/add-provider.mdx
@@ -235,6 +235,7 @@ The community maintains providers for additional services.
 - [Open Telekom Cloud (akyriako/devpod-provider-opentelekomcloud)](https://github.com/akyriako/devpod-provider-opentelekomcloud)
 - [Vultr (navaneeth-dev/devpod-provider-vultr)](https://github.com/navaneeth-dev/devpod-provider-vultr)
 - [STACKIT (stackitcloud/devpod-provider-stackit)](https://github.com/stackitcloud/devpod-provider-stackit)
+- [Podman (kuju63/devpod-provider-podman)](https://github.com/kuju63/devpod-provider-podman)
 
 These providers can be installed with the DevPod CLI in the following form:
 ```
