--- a/docs/pages/developing-in-workspaces/delete-a-workspace.mdx
+++ b/docs/pages/developing-in-workspaces/delete-a-workspace.mdx
@@ -6,7 +6,7 @@ sidebar_label: Delete a Workspace
 ## Delete a workspace
 
 Deleting a workspace means to erase all state of an existing workspace and remove all traces of it within DevPod.
-Depending on the DevPod provider, this means either removing a docker container or deleting a whole virtual machine.
+Depending on the DevPod provider, this means either removing a Docker container or deleting a whole virtual machine.
 DevPod will automatically determine what specific action to take when a workspace is deleted.
 
 ### Via DevPod Desktop Application
