--- a/docs/pages/developing-in-workspaces/devcontainer-json.mdx
+++ b/docs/pages/developing-in-workspaces/devcontainer-json.mdx
@@ -8,7 +8,7 @@ Development containers are Docker containers that provide a user with a fully fe
 Within DevPod, this container is created based on the underlying provider either locally, in a remote virtual machine or even in a Kubernetes cluster.
 DevPod makes sure that no matter where you use this configuration the developer experience stays the same.
 
-You can configure this development container for a certain git repository so that each workspace gives you a custom development environment
+You can configure this development container for a certain Git repository so that each workspace gives you a custom development environment
 completely configured with the tooling and runtimes you need for working on that specific project.
 If DevPod doesn't find any configuration for the project it will automatically detect the programming language and provide a sane default configuration.
 
