fix: lint errors

--- a/docs/pages/developing-in-workspaces/devcontainer-json.mdx
+++ b/docs/pages/developing-in-workspaces/devcontainer-json.mdx
@@ -13,7 +13,7 @@ completely configured with the tooling and runtimes you need for working on that
 If DevPod doesn't find any configuration for the project it will automatically detect the programming language and provide a sane default configuration.
 
 :::info Compatibility with VS Code & Codespaces
-The same format is used by VS Code for their development containers and by Github for their Codespaces.
+The same format is used by VS Code for their development containers and by GitHub for their Codespaces.
 This makes it easy to reuse existing configurations and tooling around this standard within DevPod.
 :::
 
@@ -21,7 +21,7 @@ This makes it easy to reuse existing configurations and tooling around this stan
 This page mostly gives you an introduction on how to work with devcontainers. For additional information take a look at:
 * [DevContainer Reference](https://containers.dev/implementors/json_reference/)
 * [VS Code DevContainer Documentation](https://code.visualstudio.com/docs/devcontainers/create-dev-container)
-* [Github Codespaces Documentation](https://docs.github.com/en/codespaces/setting-up-your-project-for-codespaces/adding-a-dev-container-configuration/introduction-to-dev-containers#devcontainerjson)
+* [GitHub Codespaces Documentation](https://docs.github.com/en/codespaces/setting-up-your-project-for-codespaces/adding-a-dev-container-configuration/introduction-to-dev-containers#devcontainerjson)
 :::
 
 :::warning Unsupported Properties
