--- a/docs/pages/managing-providers/add-provider.mdx
+++ b/docs/pages/managing-providers/add-provider.mdx
@@ -63,7 +63,7 @@ devpod provider add digitalocean
 You can use the `--name` flag to add multiple providers of the same type with different options, for example `devpod provider add aws --name aws-gpu -o AWS_INSTANCE_TYPE=p3.8xlarge`
 :::
 
-### From Github
+### From GitHub
 
 You can specify a custom provider, directly from GitHub, by using the format
 `my-username/repo`, so for example:
