--- a/docs/pages/other-topics/mobile-support.mdx
+++ b/docs/pages/other-topics/mobile-support.mdx
@@ -7,7 +7,7 @@ sidebar_label: Mobile Support
 
 At the moment, DevPod **doesn't** officially support mobile platforms.
 
-You can roll your own distribution or check out these community projects. Please open a [Github issue](https://github.com/skevetter/devpod/issues) to add yours to the list.
+You can roll your own distribution or check out these community projects. Please open a [GitHub issue](https://github.com/skevetter/devpod/issues) to add yours to the list.
 
 ### Android
 - [Vanarok Fork](https://github.com/vanarok/devpod/blob/84c6d3ec6bc1b4ebc4c618696e58ca6b5d25571f/.github/workflows/release.yaml#L168)
