--- a/docs/pages/quickstart/vim.mdx
+++ b/docs/pages/quickstart/vim.mdx
@@ -47,5 +47,5 @@ When you open the workspace, the DevPod logs give you the user/machine combinati
 
 #### Spinning up your vim config in the workspace
 
-Since DevPods target environment is a Docker container, you can also SSH into it and install your vim/neovim configuration like you would on any new machine.
+Since DevPod's target environment is a Docker container, you can also SSH into it and install your vim/neovim configuration like you would on any new machine.
 To connect to the workspace, run the command DevPod gives you after starting the workspace, usually `ssh WORKSPACE_NAME.devpod`.
