--- a/docs/pages/how-it-works/building-workspaces.mdx
+++ b/docs/pages/how-it-works/building-workspaces.mdx
@@ -3,7 +3,7 @@ title: How DevPod Builds Workspaces
 sidebar_label: Building workspaces
 ---
 
-Devpod provides the ability to build workspaces by taking a devcontainer.json and a git repository to compile an OCI compliant image with everything you need to develop
+DevPod provides the ability to build workspaces by taking a devcontainer.json and a Git repository to compile an OCI-compliant image with everything you need to develop
 against using local tools.
 
 <figure>
